[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unipost"
version = "0.2.5"
description = "Official UniPost API client for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "UniPost", email = "hello@unipost.dev" }]
keywords = ["unipost", "social-media", "api", "twitter", "linkedin", "instagram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["certifi"]

[project.optional-dependencies]
async = ["httpx>=0.25.0"]
dev = ["pytest", "pytest-asyncio", "httpx>=0.25.0", "mypy", "ruff"]

[project.urls]
Homepage = "https://unipost.dev"
Documentation = "https://unipost.dev/docs"
Repository = "https://github.com/unipost-dev/sdk-python"
Issues = "https://github.com/unipost-dev/sdk-python/issues"
